# AiGalleryOrganizer-back

./: .gitignore  README.md
ai/: .env  .gitignore  Image_tagging.py  Image_tagging_mobilenetv3.py  README.md  config.py  image_tagging_mobilenetvit.py  image_tagging_mobilenetvit_with_quality.py  maniqa.py  predict_one_image.py  requirements.txt  server.py  server_redis.py  swin.py
back/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup_files.sh
back/app/: aws.py  celery_worker.py  cron.py  database.py  dependencies.py  initial_data.py  main.py  security.py  tasks.py
back/app/models/: __init__.py  album.py  association.py  category.py  image.py  similar_group.py  similar_group_image.py  tag.py  user.py
back/app/repositories/: album.py  category.py  image.py  similar_group_repository.py  tag.py  user.py
back/app/routers/: album.py  auth.py  category.py  images.py  similar_group.py  tag.py  users.py
back/app/schemas/: album.py  category.py  image.py  similar_group.py  tag.py  token.py  user.py
back/app/services/: album.py  category.py  image.py  similar_group_service.py  similar_photo_group_service.py  tag.py  user.py
back/config/: config.py
front/: .gitignore  README.md  pubspec.yaml
front/android/app/: build.gradle.kts
front/ios/Runner.xcodeproj/: project.pbxproj
front/lib/: main.dart
front/lib/api/: base_api.dart  vizota_api.dart
front/lib/api/models/: api_models.dart
front/lib/api/services/: album_api_service.dart  auth_api_service.dart  image_api_service.dart  (+3 more)
front/web/: index.html  manifest.json
(+60 files in other folders)
