[project]
name = "vizota-backend"
version = "0.1.0"
description = "Team6 Vizota Backend API"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
    "passlib>=1.7.4",
    "python-bcrypt",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.7",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "httpx>=0.25.2",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
